<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b>facebook.com/device&lt;/b> and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">"You're in control - choose what info you want to share with apps."</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="exo_controls_fastforward_description">Fast forward</string>
    <string name="exo_controls_next_description">Next track</string>
    <string name="exo_controls_pause_description">Pause</string>
    <string name="exo_controls_play_description">Play</string>
    <string name="exo_controls_previous_description">Previous track</string>
    <string name="exo_controls_rewind_description">Rewind</string>
    <string name="exo_controls_stop_description">Stop</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="app_name">Whisper</string>
    <string name="inbox_block_user_title">Block</string>
    <string name="inbox_delete_user_text">Are you sure you want to delete this conversation? It will be permanently removed and cannot be recovered.</string>
    <string name="inbox_delete_user_title">Delete</string>
    <string name="inbox_empty_fav_header">Ooops. You have no favorites.</string>
    <string name="inbox_empty_fav_message">Favorite some chats.</string>
    <string name="inbox_empty_header">Ooops. Nothing here.</string>
    <string name="inbox_empty_message">Post a Whisper or find a new chat</string>
    <string name="main_featured_tab">Featured</string>
    <string name="main_latest_tab">Latest</string>
    <string name="main_nearby_tab">Nearby</string>
    <string name="main_ok_text">OK</string>
    <string name="main_popular_tab">Popular</string>
    <string name="message_are_banned">"Sorry, you're not allowed to message this user anymore"</string>
    <string name="message_create_conversation_error">"Uh oh! We couldn't send your message. Please check your connection and try again."</string>
    <string name="message_create_hint_text">Say something nice…</string>
    <string name="message_send_button_text">SEND</string>
    <string name="message_send_conversation_error">Something went wrong</string>
    <string name="message_send_pic_camera">Take Photo</string>
    <string name="message_send_pic_gallery">Open Gallery</string>
    <string name="message_send_pic_title">Send a Picture</string>
    <string name="messages_activity_title">Chat</string>
    <string name="numbers_abbreviated_billion">b</string>
    <string name="numbers_abbreviated_million">m</string>
    <string name="numbers_abbreviated_quadrillion">q</string>
    <string name="numbers_abbreviated_thousand">k</string>
    <string name="numbers_abbreviated_trillion">t</string>
    <string name="pin_error_positive">Okay</string>
    <string name="pin_error_text">"Your PINs don't match. Enter a new PIN twice"</string>
    <string name="pin_error_title">Oops</string>
    <string name="pin_reentry_positive">Okay</string>
    <string name="pin_reentry_title">Confirm PIN</string>
    <string name="pin_reset_fail_positive">Okay</string>
    <string name="pin_reset_fail_text">Something went wrong and we were not able to validate your pin. Please try again later.</string>
    <string name="pin_reset_fail_title">Error</string>
    <string name="pin_updated_toast">Pin updated!</string>
    <string name="pin_wrong_pin">Wrong PIN - Try again</string>
    <string name="pin_xml_0">0</string>
    <string name="pin_xml_1">1</string>
    <string name="pin_xml_2">2</string>
    <string name="pin_xml_3">3</string>
    <string name="pin_xml_4">4</string>
    <string name="pin_xml_5">5</string>
    <string name="pin_xml_6">6</string>
    <string name="pin_xml_7">7</string>
    <string name="pin_xml_8">8</string>
    <string name="pin_xml_9">9</string>
    <string name="pin_xml_enter_pin">Enter Your Pin</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>
    <string name="qc_abandon_message_negative">No</string>
    <string name="qc_abandon_message_positive">Yes</string>
    <string name="qc_bottom_buttons_camera">CAMERA</string>
    <string name="qc_bottom_buttons_font">FONT</string>
    <string name="qc_bottom_buttons_gallery">GALLERY</string>
    <string name="qc_bottom_buttons_search">SEARCH</string>
    <string name="qc_forward_button_next">NEXT</string>
    <string name="qc_forward_button_post">POST</string>
    <string name="qc_inital_hint_text">"Start typing your whisper and we'll suggest a background for you"</string>
    <string name="qc_uploading_whisper_error_toast">There was an error creating the whisper. We will try again later.</string>
    <string name="got_it_button">GOT IT</string>
    <string name="grow_your_group_tooltip_text">"Now let's add some members. Use the share buttons in the promote page to find group members."</string>
    <string name="grow_your_group_tooltip_title">Grow Your Group</string>
    <string name="heart">Heart</string>
    <string name="no_thanks">NO, THANKS</string>
    <string name="please_rate_this_chat">Please rate this chat</string>
    <string name="profile_age_15_17">15-17</string>
    <string name="profile_age_18_20">18-20</string>
    <string name="profile_age_21_25">21-25</string>
    <string name="profile_age_26_29">26-29</string>
    <string name="profile_age_30_35">30-35</string>
    <string name="profile_age_36_44">36-44</string>
    <string name="profile_age_45">  45+  </string>
    <string name="profile_fragment_first_time_info">"Answer these questions to see others' age, gender and location."</string>
    <string name="profile_fragment_title">Chat Profile</string>
    <string name="profile_gender_female">FEMALE</string>
    <string name="profile_gender_male">MALE</string>
    <string name="profile_gender_other">OTHER</string>
    <string name="profile_my_age">MY AGE</string>
    <string name="profile_my_gender">MY GENDER</string>
    <string name="profile_my_location">MY LOCATION</string>
    <string name="profile_my_location_hint">See if other users are nearby</string>
    <string name="profile_turn_on_location">TURN  ON  LOCATION</string>
    <string name="rate_chat_hint_default">The user will not see your rating</string>
    <string name="rate_chat_text">Your rating helps keep the Whisper community safe and fun.</string>
    <string name="share">Share</string>
    <string name="submit">SUBMIT</string>
    <string name="reply">Reply</string>
</resources>