<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:whisper="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
        <sh.whisper.ui.WTextView android:textSize="22.0sp" android:textColor="@color/White" android:id="@id/w_pin_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="22.0dip" android:text="@string/pin_xml_enter_pin" />
        <LinearLayout android:gravity="center_horizontal" android:layout_gravity="center" android:orientation="horizontal" android:id="@id/w_pin_keys" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:background="@drawable/w_keypad_cell" android:layout_width="56.0dip" android:layout_height="56.0dip" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:layout_marginBottom="25.0dip" />
            <ImageView android:background="@drawable/w_keypad_cell" android:layout_width="56.0dip" android:layout_height="56.0dip" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:layout_marginBottom="25.0dip" />
            <ImageView android:background="@drawable/w_keypad_cell" android:layout_width="56.0dip" android:layout_height="56.0dip" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:layout_marginBottom="25.0dip" />
            <ImageView android:background="@drawable/w_keypad_cell" android:layout_width="56.0dip" android:layout_height="56.0dip" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:layout_marginBottom="25.0dip" />
        </LinearLayout>
        <sh.whisper.ui.WTextView android:textColor="@color/White" android:id="@id/w_pin_error" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:background="#ff000000" android:paddingTop="1.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <sh.whisper.ui.WButton android:textSize="28.0sp" android:textColor="@color/White" android:tag="1" android:background="@drawable/pin_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/pin_xml_1" android:layout_weight="1.0" whisper:weight="bold" />
        <sh.whisper.ui.WButton android:textSize="28.0sp" android:textColor="@color/White" android:tag="2" android:background="@drawable/pin_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/pin_xml_2" android:layout_weight="1.0" whisper:weight="bold" />
        <sh.whisper.ui.WButton android:textSize="28.0sp" android:textColor="@color/White" android:tag="3" android:background="@drawable/pin_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/pin_xml_3" android:layout_weight="1.0" whisper:weight="bold" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <sh.whisper.ui.WButton android:textSize="28.0sp" android:textColor="@color/White" android:tag="4" android:background="@drawable/pin_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/pin_xml_4" android:layout_weight="1.0" whisper:weight="bold" />
        <sh.whisper.ui.WButton android:textSize="28.0sp" android:textColor="@color/White" android:tag="5" android:background="@drawable/pin_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/pin_xml_5" android:layout_weight="1.0" whisper:weight="bold" />
        <sh.whisper.ui.WButton android:textSize="28.0sp" android:textColor="@color/White" android:tag="6" android:background="@drawable/pin_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/pin_xml_6" android:layout_weight="1.0" whisper:weight="bold" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <sh.whisper.ui.WButton android:textSize="28.0sp" android:textColor="@color/White" android:tag="7" android:background="@drawable/pin_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/pin_xml_7" android:layout_weight="1.0" whisper:weight="bold" />
        <sh.whisper.ui.WButton android:textSize="28.0sp" android:textColor="@color/White" android:tag="8" android:background="@drawable/pin_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/pin_xml_8" android:layout_weight="1.0" whisper:weight="bold" />
        <sh.whisper.ui.WButton android:textSize="28.0sp" android:textColor="@color/White" android:tag="9" android:background="@drawable/pin_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/pin_xml_9" android:layout_weight="1.0" whisper:weight="bold" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <sh.whisper.ui.WButton android:textSize="15.0sp" android:textColor="@color/White" android:id="@id/pin_settings_button" android:tag="11" android:background="@drawable/pin_button" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" whisper:weight="bold" />
        <sh.whisper.ui.WButton android:textSize="28.0sp" android:textColor="@color/White" android:tag="0" android:background="@drawable/pin_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/pin_xml_0" android:layout_weight="1.0" whisper:weight="bold" />
        <ImageButton android:textSize="28.0sp" android:textStyle="bold" android:textColor="@color/White" android:tag="10" android:background="@drawable/pin_button" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/kbd_delete_icon" android:layout_weight="1.0" />
    </LinearLayout>
</merge>