<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:whisper="http://schemas.android.com/apk/res-auto">
    <sh.whisper.ui.WButton android:textSize="20.0sp" android:textColor="@color/WDarkGrey_v5" android:gravity="center" android:layout_gravity="center" android:id="@id/heart_meta" android:background="@color/Clear" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/heart" android:maxLines="1" android:drawableLeft="@drawable/browser_heart_selector" android:drawablePadding="5.0dip" whisper:layout_constraintHorizontal_chainStyle="spread" whisper:layout_constraintLeft_toLeftOf="parent" whisper:layout_constraintRight_toLeftOf="@id/reply_meta" whisper:weight="medium" />
    <sh.whisper.ui.WButton android:textSize="20.0sp" android:textColor="@color/WDarkGrey_v5" android:gravity="center" android:layout_gravity="center" android:id="@id/reply_meta" android:background="@color/Clear" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/reply" android:maxLines="1" android:drawableLeft="@drawable/browser_reply" android:drawablePadding="5.0dip" whisper:layout_constraintLeft_toRightOf="@id/heart_meta" whisper:layout_constraintRight_toLeftOf="@id/chat_share_container" whisper:weight="medium" />
    <FrameLayout android:id="@id/chat_share_container" android:layout_width="wrap_content" android:layout_height="fill_parent" whisper:layout_constraintLeft_toRightOf="@id/reply_meta" whisper:layout_constraintRight_toRightOf="parent">
        <sh.whisper.ui.WButton android:textSize="20.0sp" android:textColor="@color/WDarkGrey_v5" android:gravity="center" android:layout_gravity="center" android:id="@id/chat_meta" android:background="@color/Clear" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/messages_activity_title" android:maxLines="1" android:drawableLeft="@drawable/browser_chat" android:drawablePadding="5.0dip" whisper:weight="medium" />
        <sh.whisper.ui.WButton android:textSize="20.0sp" android:textColor="@color/WDarkGrey_v5" android:gravity="center" android:layout_gravity="center" android:id="@id/share_button" android:background="@color/Clear" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/share" android:maxLines="1" android:drawableLeft="@drawable/browser_share" android:drawablePadding="5.0dip" whisper:weight="medium" />
    </FrameLayout>
</merge>