<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/dialog_layout" android:background="@color/White" android:padding="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:whisper="http://schemas.android.com/apk/res-auto">
    <sh.whisper.ui.WTextView android:textSize="20.0sp" android:textColor="@color/WDarkGrey_v5" android:id="@id/dialog_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/please_rate_this_chat" whisper:weight="medium" />
    <sh.whisper.ui.WTextView android:textSize="17.0sp" android:textColor="@color/WMediumGrey_v5" android:id="@id/dialog_content" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/rate_chat_text" />
    <RadioGroup android:orientation="horizontal" android:id="@id/rating_bar_emotions" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="25.0dip" android:layout_marginBottom="15.0dip">
        <RadioButton android:id="@id/element_one" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@drawable/rate_chat_icon_selector1" style="@style/RatingBarElement" />
        <RadioButton android:id="@id/element_two" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@drawable/rate_chat_icon_selector2" style="@style/RatingBarElement" />
        <RadioButton android:id="@id/element_three" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@drawable/rate_chat_icon_selector3" style="@style/RatingBarElement" />
        <RadioButton android:id="@id/element_four" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@drawable/rate_chat_icon_selector4" style="@style/RatingBarElement" />
        <RadioButton android:id="@id/element_five" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@drawable/rate_chat_icon_selector5" style="@style/RatingBarElement" />
    </RadioGroup>
    <sh.whisper.ui.WTextView android:textSize="12.0sp" android:textColor="@color/WLightGrey_v5" android:layout_gravity="center_horizontal" android:id="@id/rating_hint" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/rate_chat_hint_default" />
    <LinearLayout android:gravity="right" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
        <sh.whisper.ui.WTextView android:textSize="15.0sp" android:textColor="@color/WPurple_v5" android:gravity="right" android:id="@id/left_button" android:padding="5.0dip" android:clickable="true" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginRight="15.0dip" android:text="@string/no_thanks" whisper:weight="medium" />
        <sh.whisper.ui.WTextView android:textSize="15.0sp" android:textColor="@color/selector_submit_button" android:gravity="right" android:id="@id/right_button" android:padding="5.0dip" android:clickable="true" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/submit" whisper:weight="medium" />
    </LinearLayout>
</LinearLayout>