<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:layout_gravity="center|right|top" android:background="@drawable/pointer_4_box" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="25.0dip" />
    <LinearLayout android:orientation="vertical" android:background="@drawable/white_rounded_borders_2dp" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <sh.whisper.ui.WTextView android:textSize="18.0sp" android:textColor="@color/Black" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="17.0dip" android:text="@string/grow_your_group_tooltip_title" android:drawableLeft="@drawable/short_black_line" android:drawableRight="@drawable/short_black_line" android:drawablePadding="9.0dip" app:weight="medium" />
        <sh.whisper.ui.WTextView android:textSize="14.0sp" android:textColor="@color/Black" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="15.0dip" android:text="@string/grow_your_group_tooltip_text" app:fontStyle="normal" />
        <View android:background="@color/WLightGrey_v5" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="2.0dip" android:layout_marginRight="2.0dip" />
        <sh.whisper.ui.WTextView android:textSize="16.0sp" android:textColor="@color/White" android:gravity="center" android:id="@id/button" android:background="@drawable/purple_btn" android:paddingLeft="40.0dip" android:paddingRight="40.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="23.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="23.0dip" android:layout_marginBottom="18.0dip" android:text="@string/got_it_button" app:weight="bold" />
    </LinearLayout>
</LinearLayout>